--- a/app/src/main/res/layout/activity_choos_player_parents.xml
+++ b/app/src/main/res/layout/activity_choos_player_parents.xml
@@ -4,6 +4,269 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChoosPlayerActivityParents">
+    tools:context=".ChosePlayerActivity">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/team1_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:text="@string/team1"
+            android:textSize="48sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_toStartOf="@+id/vs"/>
+
+        <TextView
+            android:id="@+id/vs_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:text="@string/vs"
+            android:textSize="48sp"
+            android:layout_centerHorizontal="true"
+            />
+
+        <TextView
+            android:id="@+id/team2_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:text="@string/team2"
+            android:textSize="48sp"
+            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@id/vs_parents"
+            />
+
+        <TextView
+            android:id="@+id/score1_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:text="12"
+            android:textSize="48sp"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="40dp"
+            android:layout_below="@id/team1_parents"
+            />
+
+        <TextView
+            android:id="@+id/timeout1_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:text="2"
+            android:textSize="48sp"
+            android:layout_toEndOf="@id/score1_parents"
+            android:layout_below="@id/team1_parents"
+            />
+
+        <TextView
+            android:id="@+id/foul1_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:text="1"
+            android:textSize="48sp"
+            android:layout_toEndOf="@id/timeout1_parents"
+            android:layout_below="@id/team1_parents"
+            />
+
+        <TextView
+            android:id="@+id/score2_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:text="8"
+            android:textSize="48sp"
+            android:layout_toStartOf="@id/team2_parents"
+            android:layout_below="@id/team1_parents"
+            />
+
+        <TextView
+            android:id="@+id/timeout2_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:text="3"
+            android:textSize="48sp"
+            android:layout_toEndOf="@id/score2_parents"
+            android:layout_below="@id/team1_parents"
+            />
+
+        <TextView
+            android:id="@+id/foul2_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:text="2"
+            android:textSize="48sp"
+            android:layout_toEndOf="@id/timeout2_parents"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/team1_parents"
+            />
+
+        <TextView
+            android:id="@+id/quarter_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:text="@string/quarter2"
+            android:textSize="48sp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/score1_parents"
+            />
+
+        <TextView
+            android:id="@+id/time_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:text="@string/timeExample"
+            android:textSize="48sp"
+            android:layout_toEndOf="@id/quarter_parents"
+            android:layout_below="@id/timeout1_parents"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            />
+
+        <TextView
+            android:id="@+id/live_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/live"
+            android:layout_below="@+id/score2_parents"
+            android:layout_toEndOf="@id/time_parents"
+            android:textSize="48sp"
+            android:paddingBottom="10dp"
+            />
+
+        <TextView
+            android:id="@+id/button_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/stats"
+            android:textSize="48sp"
+            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@id/live_parents"
+            android:layout_below="@+id/foul2_parents"
+            android:paddingBottom="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            />
+
+        <Button
+            android:id="@+id/viewAction_button_parents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Actions"
+            android:textSize="40sp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            />
+
+        <Button
+            android:id="@+id/chose_player_button1_parents"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/live_parents"
+            android:layout_alignStart="@id/team1_parents"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player1" />
+
+        <Button
+            android:id="@+id/chose_player_button2_parents"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button5_parents"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/round_button_2"
+            android:text="@string/player1" />
+
+        <Button
+            android:id="@+id/chose_player_button3_parents"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@+id/live_parents"
+            android:layout_alignEnd="@id/team2_parents"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player2" />
+
+        <Button
+            android:id="@+id/chose_player_button4_parents"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button5_parents"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/round_button_2"
+            android:text="@string/player2" />
+
+        <Button
+            android:id="@+id/chose_player_button5_parents"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button1_parents"
+            android:layout_toEndOf="@id/chose_player_button1_parents"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player3" />
+
+        <Button
+            android:id="@+id/chose_player_button6_parents"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button5_parents"
+            android:layout_alignEnd="@+id/team2_parents"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/round_button_2"
+            android:text="@string/player3" />
+
+        <Button
+            android:id="@+id/chose_player_button7_parents"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button1_parents"
+            android:layout_toEndOf="@id/chose_player_button9_parents"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player4" />
+
+        <Button
+            android:id="@+id/chose_player_button8_parents"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@+id/chose_player_button2_parents"
+            android:layout_toEndOf="@id/chose_player_button2_parents"
+            android:background="@drawable/round_button_2"
+            android:text="@string/player4" />
+
+        <Button
+            android:id="@+id/chose_player_button9_parents"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/live_parents"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player5" />
+
+        <Button
+            android:id="@+id/chose_player_button10_parents"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button2_parents"
+            android:layout_toEndOf="@id/chose_player_button4_parents"
+            android:background="@drawable/round_button_2"
+            android:text="@string/player5" />
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
