--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -18,7 +18,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:text="UIUC"
-            android:textSize="36sp"
+            android:textSize="40sp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             />
@@ -31,7 +31,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:text="@string/team2"
-            android:textSize="36sp"
+            android:textSize="40sp"
             android:layout_alignParentEnd="true"
             />
 
@@ -43,6 +43,7 @@
             android:text="108"
             android:textSize="36sp"
             android:layout_toStartOf="@id/dash"
+            android:layout_alignBaseline="@id/team2"
             />
 
         <TextView
@@ -50,11 +51,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="20dp"
-            android:paddingEnd="20dp"
-            android:paddingStart="20dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
             android:text="-"
             android:textSize="36sp"
             android:layout_centerHorizontal="true"
+            android:layout_alignBaseline="@id/team2"
             />
 
         <TextView
@@ -65,6 +67,7 @@
             android:layout_toEndOf="@+id/dash"
             android:textSize="36sp"
             android:paddingBottom="10dp"
+            android:layout_alignBaseline="@id/team2"
             />
 
         <Button
