--- a/app/src/main/res/layout/activity_view_games.xml
+++ b/app/src/main/res/layout/activity_view_games.xml
@@ -8,38 +8,61 @@
 
     <TextView
         android:id="@+id/league"
-        android:layout_width="285dp"
-        android:layout_height="53dp"
+        android:layout_width="253dp"
+        android:layout_height="72dp"
         android:layout_gravity="fill_horizontal"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="@string/leagueName"
+        android:text="Schedule"
         android:textColor="#000000"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:id="@+id/choosegame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Scheduled Games"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/league" />
-
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
+        android:layout_marginTop="8dp"
         android:scrollbarAlwaysDrawHorizontalTrack="false"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:verticalScrollbarPosition="right"
-        app:layout_constraintTop_toBottomOf="@+id/choosegame"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintTop_toBottomOf="@+id/league"
+        tools:layout_editor_absoluteX="2dp">
+
+
+  <!--      <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:background="@drawable/item_color_grey"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vs. Purdue"
+                android:layout_alignParentStart="true"
+                android:textSize="26sp"
+                android:padding="20dp"
+                android:textColor="#000000"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="4/27"
+                android:padding="20dp"
+                android:textSize="26sp"
+                android:textColor="#000000"
+                />
+
+        </RelativeLayout>
+-->
 
         <LinearLayout
             android:id="@+id/layout"
@@ -54,8 +77,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="4/27 - UIUC Vs. Purdue"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
@@ -63,8 +89,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="4/23 - UIUC Vs. Iowa"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
@@ -72,8 +101,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="4/19 - UIUC Vs. Michigan"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
@@ -81,8 +113,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="4/15 - UIUC Vs. Purdue"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
@@ -90,8 +125,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="4/05 - UIUC Vs. Iowa"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
@@ -99,8 +137,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="3/21 - UIUC Vs. ISU"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
@@ -108,8 +149,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="3/18 - UIUC Vs. Ohio"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
@@ -117,8 +161,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="3/12 - UIUC Vs. Michigan"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
@@ -126,8 +173,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="3/09 - UIUC Vs. Purdue"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
@@ -135,8 +185,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="3/03 - UIUC Vs. Michigan"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
 
             <Button
@@ -144,71 +197,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/game1"
+                android:padding="20dp"
+                android:text="2/26 - UIUC Vs. ISU"
+                android:textAlignment="viewStart"
                 app:layout_constraintVertical_bias="0.025"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <Button
-                android:id="@+id/game12"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="@string/game1"
-                app:layout_constraintVertical_bias="0.025"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <Button
-                android:id="@+id/game13"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="@string/game1"
-                app:layout_constraintVertical_bias="0.025"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <Button
-                android:id="@+id/game14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="@string/game1"
-                app:layout_constraintVertical_bias="0.025"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <Button
-                android:id="@+id/game15"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="@string/game1"
-                app:layout_constraintVertical_bias="0.025"
+                android:textSize="20sp"
                 tools:layout_editor_absoluteX="0dp" />
         </LinearLayout>
 
     </ScrollView>
 
     <Button
-        android:id="@+id/team_button"
-        android:layout_width="96dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/team_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toEndOf="@+id/league"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
         android:id="@+id/add_new_game"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_width="151dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="4dp"
         android:gravity="center"
+        android:padding="20dp"
         android:text="@string/addNewGame"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.816"
-        app:layout_constraintStart_toEndOf="@+id/choosegame"
-        app:layout_constraintTop_toBottomOf="@+id/team_button" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
