--- a/app/src/main/res/layout/activity_chose_player.xml
+++ b/app/src/main/res/layout/activity_chose_player.xml
@@ -15,22 +15,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="20dp"
-            android:text="@string/team1"
-            android:textSize="48sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_toStartOf="@+id/vs"/>
-
-        <TextView
-            android:id="@+id/vs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:text="@string/vs"
-            android:textSize="48sp"
-            android:layout_centerHorizontal="true"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="UIUC"
+            android:textSize="40sp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
             />
 
         <TextView
@@ -38,10 +28,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="20dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="@string/team2"
-            android:textSize="48sp"
+            android:textSize="40sp"
             android:layout_alignParentEnd="true"
-            android:layout_toEndOf="@id/vs"
             />
 
         <TextView
@@ -49,72 +40,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="10dp"
-            android:text="12"
-            android:textSize="48sp"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="40dp"
-            android:layout_below="@id/team1"
+            android:text="108"
+            android:textSize="36sp"
+            android:layout_toStartOf="@id/dash"
+            android:layout_alignBaseline="@id/team2"
             />
 
         <TextView
-            android:id="@+id/timeout1"
+            android:id="@+id/dash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:text="2"
-            android:textSize="48sp"
-            android:layout_toEndOf="@id/score1"
-            android:layout_below="@id/team1"
-            />
-
-        <TextView
-            android:id="@+id/foul1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:text="1"
-            android:textSize="48sp"
-            android:layout_toEndOf="@id/timeout1"
-            android:layout_below="@id/team1"
+            android:paddingBottom="20dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
+            android:text="-"
+            android:textSize="36sp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignBaseline="@id/team2"
             />
 
         <TextView
             android:id="@+id/score2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="86"
+            android:layout_toEndOf="@+id/dash"
+            android:textSize="36sp"
             android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:text="8"
-            android:textSize="48sp"
-            android:layout_toStartOf="@id/team2"
-            android:layout_below="@id/team1"
-            />
-
-        <TextView
-            android:id="@+id/timeout2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="20dp"
-            android:text="3"
-            android:textSize="48sp"
-            android:layout_toEndOf="@id/score2"
-            android:layout_below="@id/team1"
-            />
-
-        <TextView
-            android:id="@+id/foul2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="2"
-            android:textSize="48sp"
-            android:layout_toEndOf="@id/timeout2"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/team1"
+            android:layout_alignBaseline="@id/team2"
             />
 
         <TextView
@@ -123,47 +76,19 @@
             android:layout_height="wrap_content"
             android:paddingBottom="10dp"
             android:text="@string/quarter2"
-            android:textSize="48sp"
-            android:layout_alignParentStart="true"
+            android:textSize="32sp"
+            android:layout_centerHorizontal="true"
             android:layout_below="@id/score1"
             />
 
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="@string/timeExample"
-            android:textSize="48sp"
-            android:layout_toEndOf="@id/quarter"
-            android:layout_below="@id/timeout1"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            />
-
-        <TextView
-            android:id="@+id/live"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/live"
-            android:layout_below="@+id/score2"
-            android:layout_toEndOf="@id/time"
-            android:textSize="48sp"
-            android:paddingBottom="10dp"
-            />
-
-        <TextView
+        <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/stats"
-            android:textSize="48sp"
-            android:layout_alignParentEnd="true"
-            android:layout_toEndOf="@id/live"
-            android:layout_below="@+id/foul2"
-            android:paddingBottom="10dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
+            android:textSize="40sp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
             />
 
         <Button
@@ -180,8 +105,9 @@
             android:id="@+id/chose_player_button1"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_below="@id/live"
-            android:layout_alignStart="@id/team1"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/team1"
+            android:layout_marginTop="100dp"
             android:background="@drawable/round_button_1"
             android:text="@string/player1" />
 
@@ -189,84 +115,133 @@
             android:id="@+id/chose_player_button2"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_below="@id/chose_player_button5"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/round_button_2"
-            android:text="@string/player1" />
+            android:layout_below="@+id/chose_player_button1"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player2" />
 
         <Button
             android:id="@+id/chose_player_button3"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_below="@+id/live"
-            android:layout_alignEnd="@id/team2"
+            android:layout_below="@id/chose_player_button2"
+            android:layout_alignParentStart="true"
             android:background="@drawable/round_button_1"
-            android:text="@string/player2" />
+            android:text="@string/player3" />
 
         <Button
             android:id="@+id/chose_player_button4"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_below="@id/chose_player_button5"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/round_button_2"
-            android:text="@string/player2" />
+            android:layout_below="@id/chose_player_button3"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player4" />
 
         <Button
             android:id="@+id/chose_player_button5"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_below="@id/chose_player_button1"
+            android:layout_below="@id/chose_player_button4"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player5" />
+
+        <Button
+            android:id="@+id/add_stat1"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/action1"
+            android:layout_margin="10dp"
             android:layout_toEndOf="@id/chose_player_button1"
-            android:background="@drawable/round_button_1"
-            android:text="@string/player3" />
-
+            android:layout_alignBaseline="@id/chose_player_button1"
+            android:maxLines="2"/>
         <Button
-            android:id="@+id/chose_player_button6"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_below="@id/chose_player_button5"
-            android:layout_alignEnd="@+id/team2"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/round_button_2"
-            android:text="@string/player3" />
-
+            android:id="@+id/add_stat2"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/action2"
+            android:layout_margin="10dp"
+            android:layout_toEndOf="@id/add_stat1"
+            android:layout_alignBaseline="@id/chose_player_button1"
+            android:maxLines="2"/>
         <Button
-            android:id="@+id/chose_player_button7"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_below="@id/chose_player_button1"
-            android:layout_toEndOf="@id/chose_player_button9"
-            android:background="@drawable/round_button_1"
-            android:text="@string/player4" />
-
-        <Button
-            android:id="@+id/chose_player_button8"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_below="@+id/chose_player_button2"
+            android:id="@+id/add_stat3"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/action5"
+            android:layout_margin="10dp"
+            android:layout_alignBaseline="@id/chose_player_button2"
             android:layout_toEndOf="@id/chose_player_button2"
-            android:background="@drawable/round_button_2"
-            android:text="@string/player4" />
+            android:maxLines="2"/>
 
         <Button
-            android:id="@+id/chose_player_button9"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_below="@id/live"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/round_button_1"
-            android:text="@string/player5" />
+            android:id="@+id/add_stat4"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/action3"
+            android:layout_alignBaseline="@id/chose_player_button2"
+            android:layout_toEndOf="@id/add_stat3"
+            android:layout_margin="10dp"
+            android:maxLines="2"/>
+        <Button
+            android:id="@+id/add_stat5"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/action4"
+            android:layout_alignBaseline="@id/chose_player_button3"
+            android:layout_toEndOf="@id/chose_player_button3"
+            android:layout_margin="10dp"
+            android:maxLines="2"/>
+        <Button
+            android:id="@+id/add_stat6"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/action6"
+            android:layout_alignBaseline="@id/chose_player_button3"
+            android:layout_toEndOf="@id/add_stat5"
+            android:layout_margin="10dp"
+            android:maxLines="2"/>
 
         <Button
-            android:id="@+id/chose_player_button10"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_below="@id/chose_player_button2"
+            android:id="@+id/add_stat7"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignBaseline="@id/chose_player_button4"
             android:layout_toEndOf="@id/chose_player_button4"
-            android:background="@drawable/round_button_2"
-            android:text="@string/player5" />
+            android:text="@string/action7"
+            android:layout_margin="10dp"
+            android:maxLines="2"/>
+
+        <Button
+            android:id="@+id/add_stat8"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignBaseline="@id/chose_player_button4"
+            android:layout_toEndOf="@id/add_stat7"
+            android:text="@string/action8"
+            android:layout_margin="10dp"
+            android:maxLines="2"/>
+
+        <Button
+            android:id="@+id/add_stat9"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignBaseline="@id/chose_player_button5"
+            android:layout_toEndOf="@id/chose_player_button5"
+            android:text="@string/action9"
+            android:layout_margin="10dp"
+            android:maxLines="2"/>
+
+        <Button
+            android:id="@+id/add_stat10"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignBaseline="@id/chose_player_button5"
+            android:layout_toEndOf="@id/add_stat9"
+            android:text="@string/action10"
+            android:layout_margin="10dp"
+            android:maxLines="2"/>
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
